[package]
name = "wrtc"
version = "0.3.0"
edition = "2021"
description = "Wrapper around webrtc-rs library, focused on developer experience"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["webrtc"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.9"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
arc-swap = "1.6"
bytes = "1.5"
futures-util = { version = "0.3", features=["sink"] }
tokio-util = "0.7"
log = "0.4"
serde = {version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"